--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Excursion</title>
     <meta name="description" content="This is an example of a meta description.">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
@@ -16,5 +16,28 @@
   <body>
 		<h1>Discover hidden places in the world around you</h1>
 		<a href="#"><h4>Download Excursion (Coming Soon)</h4></a>
+
+        <div class="video">
+            <video loop src="resources/videos/excursion.mp4" type="video/mp4" autoplay="true"></video>
+        </div>
+
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+        <div class="image">
+            <img src="resources/images/camp.jpg" alt="camping site">
+        </div>
+
+        <div class="icon">
+            <img src="resources/images/phone.png" alt="mobile phone icon">
+        </div>
+
+        <h2>Coming Soon for iPhone and Android</h2>
+        <a href="#"><h4>Download Excursion (Coming Soon)</h4></a>
+
+
+        <footer>
+            <p>@Excursion</p>
+        </footer>
   </body>
 </html>
